--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,11 @@
                     </webApp>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version> <!-- Use the desired version of the SonarScanner Maven plugin -->
+            </plugin>
 		<!-- CODE COVERAGE -->
  		    <plugin>
  		        <groupId>org.jacoco</groupId>
