--- a/kubernetes/vpro-app/rmq-dep.yml
+++ b/kubernetes/vpro-app/rmq-dep.yml
@@ -29,3 +29,16 @@ spec:
          - name: RABBITMQ_DEFAULT_USER
            value: "guest"
 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: vpromq01
+spec:
+  ports:
+  - port: 5672
+    targetPort: vpromq01-port
+    protocol: TCP
+  selector:
+    app: vpromq01
+  type: ClusterIP
