--- a/kubernetes/vpro-app/vprodbdep.yml
+++ b/kubernetes/vpro-app/vprodbdep.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: vprodb
-        image: vprofile/vprofiledb 
+        image: greyabiwon/vprofiledb:latest
         ports:
         - name: vprodb-port
           containerPort: 3306
@@ -29,4 +29,19 @@ spec:
 #        env:
 #         - name: MYSQL_ROOT_PASSWORD
 #           value: "vprodbpass"
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: vprodb
+spec:
+  ports:
+  - port: 3306
+    targetPort: vprodb-port
+    protocol: TCP
+  selector:
+    app: vprodb
+  type: ClusterIP
+
 
