--- a/pom.xml
+++ b/pom.xml
@@ -133,10 +133,15 @@
                 </configuration>
             </plugin>
 		<!-- CODE COVERAGE -->
-		    <plugin>
-		        <groupId>org.jacoco</groupId>
-		        <artifactId>jacoco-maven-plugin</artifactId>
-		        <version>0.8.4</version>
+		      <plugin>
+                     <groupId>org.apache.maven.plugins</groupId>
+                     <artifactId>maven-war-plugin</artifactId>
+                     <version>3.2.2</version>
+                    </plugin>
+ 		    <plugin>
+ 		        <groupId>org.jacoco</groupId>
+ 		        <artifactId>jacoco-maven-plugin</artifactId>
+			<version>0.8.4</version>
 		        <executions>
 		            <execution>
 		                <id>jacoco-initialize</id>
