--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -112,7 +112,7 @@ pipeline {
             steps {
                 script {
                     docker.withRegistry(vprofileRegistry, registryCredential) {
-                        dockerImage.push("${env.BUILD_ID}-${env.BUILD_TIMESTAMP}")
+                        dockerImage.push(appregistry + "${env.BUILD_ID}",)
                         dockerImage.push("latest")
                     }
                 }
