docker image defined

--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -99,7 +99,7 @@ pipeline {
                 )
             } 
         }
-
+        def dockerImage
         stage('Build docker image'){
             steps {
                 script {
