--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -104,7 +104,7 @@ pipeline {
         stage('Build docker image'){
             steps {
                 script {
-                    dockerImage = docker.build(appregistry + ":$BUILD_Number}", "./Docker-files/app/multistage/")
+                    dockerImage = docker.build(appregistry + ":$BUILD_NUMBER}", "./Docker-files/app/multistage/")
                 }
             }
         }
@@ -113,7 +113,7 @@ pipeline {
             steps {
                 script {
                     docker.withRegistry(vprofileRegistry, registryCredential) {
-                        dockerImage.push("$BUILD_Number")
+                        dockerImage.push("$BUILD_NUMBER")
                         dockerImage.push("latest")
                     }
                 }
