--- a/.github/workflows/vprobuild.yml
+++ b/.github/workflows/vprobuild.yml
@@ -6,12 +6,11 @@ jobs:
     steps:
      - name: Fetch Source coce
        uses: actions/checkout@v4
-     - name: Build artifacts
-       run: | 
-          mvn install
-          mv target/vprofile-v2.war .
-          rm -rf target
-          mkdir target
-          mv vprofile-v2.war target/
-          ls -l target/
+
+     - name: Maven test
+       run: mvn test
+       
+     - name: Checkstyle
+       run: mvn checkstyle:checkstyle
+       
           
