Image tagged properly

--- a/.github/workflows/vprobuild.yml
+++ b/.github/workflows/vprobuild.yml
@@ -2,7 +2,7 @@ name: Build Workflow
 on: workflow_dispatch
 jobs:
   first-job:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu:latest
     steps:
      - name: Fetch Source coce
        uses: actions/checkout@v4
@@ -12,5 +12,5 @@ jobs:
        
      - name: Checkstyle
        run: mvn checkstyle:checkstyle
-       
+
           
