--- a/.github/workflows/vprobuild.yml
+++ b/.github/workflows/vprobuild.yml
@@ -108,7 +108,7 @@ jobs:
         with:
           task-definition: ${{ env.ECS_TASK_DEFINITION }}
           container-name: ${{ env.CONTAINER_NAME }}
-          image: ${{secrets.AWS_REGISTRY}}/${{ env.ECR_REPOSITORY }}:${{ github.run_number 
+          image: ${{secrets.AWS_REGISTRY}}/${{ env.ECR_REPOSITORY }}:${{ github.run_number }}
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
